--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -14,7 +14,7 @@ plugin:
   version:
     major: 2
     minor: 0
-    patch: 43
+    patch: 44
   description: |
     Hotel Website is a stylish multi-page Crafter CMS blueprint with video backgrounds.
   website:
@@ -91,6 +91,39 @@ plugin:
     - major: 4
       minor: 2
       patch: 2
+    - major: 4
+      minor: 2
+      patch: 3
+    - major: 4
+      minor: 2
+      patch: 4
+    - major: 4
+      minor: 2
+      patch: 5
+    - major: 5
+      minor: 0
+      patch: 0
+    - major: 5
+      minor: 0
+      patch: 1
+    - major: 5
+      minor: 0
+      patch: 2
+    - major: 5
+      minor: 0
+      patch: 3
+    - major: 5
+      minor: 1
+      patch: 0
+    - major: 5
+      minor: 1
+      patch: 1
+    - major: 5
+      minor: 1
+      patch: 2
+    - major: 5
+      minor: 1
+      patch: 3
   crafterCmsEditions:
     - community
     - enterprise
